<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:text="@string/answer_pet_dog"
        android:id="@+id/answer_favorite_pet_dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/answer_pet_cat"
        android:id="@+id/answer_favorite_pet_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/answer_favorite_pet_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/answer_pet_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>