<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/question_layout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dk.itu.smdp.surveysample.survey.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/question_text_view"
        android:text="@string/question_favorite_pet"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/question_answers_scrollview"
        android:layout_below="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/question_fragment" />

    </ScrollView>

    <RelativeLayout
        android:id="@+id/question_buttons_view"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/question_button_previous"
            android:text="@string/button_previous_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/question_button_next"
            android:text="@string/button_next_question"
            android:layout_toRightOf="@id/question_button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
